--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="table-container">
-    <table id="demo-table" data-page-length="10">
+    <table id="demo-table" data-page-length="10" data-order='[[0, "ASC"]]'>
         <thead>
             <tr>
                 <th data-search="combobox">Name</th>
