ajout de data search

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,7 @@
                 <th data-search="combobox">Name</th>
                 <th data-search="input">Age</th>
                 <th data-search="combobox">Country</th>
+                <th data-search="combobox">Date de naissance</th>
             </tr>
         </thead>
         <tbody>
@@ -25,16 +26,19 @@
                 <td>John Doe</td>
                 <td>28</td>
                 <td>USA</td>
+                <td data-order="416271600">12 Mars 1983</td>
             </tr>
             <tr>
                 <td>Jane Smith</td>
                 <td>34</td>
                 <td>Canada</td>
+                <td data-order="325461600">25 Avril 1980</td>
             </tr>
             <tr>
                 <td>Alice</td>
                 <td>29</td>
                 <td>UK</td>
+                <td data-order="304984800">1er Septembre 1979</td>
             </tr>
         </tbody>
     </table>
