--- a/demo/index1.html
+++ b/demo/index1.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table Beautifuler Demo</title>
-    <script src="./script.js" defer></script>
 
     <link rel="stylesheet" href="./../src/TableBeautifuller.min.css">
     <script src="./../src/TableBeautifuller.js" defer></script>
@@ -12,7 +11,7 @@
 <body>
 
 <div class="table-container">
-    <table id="demo-table" data-page-length="10" data-order='[[0, "ASC"]]'>
+    <table id="demo-table" data-page-length="1" data-order='[[0, "ASC"]]'>
         <thead>
             <tr>
                 <th data-search="combobox">Name</th>
@@ -42,8 +41,17 @@
             </tr>
         </tbody>
     </table>
-</div>
 
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+    // Initialiser TableBeautifuller pour le tableau d'exemple
+    let table = new TableBeautifuller("demo-table");
+
+    // On peut détruire le tableau
+    // table.destroy(); 
+
+});
+</script>
 
 
 <style>
