ajout option activable search colone

--- a/demo/index2.html
+++ b/demo/index2.html
@@ -14,12 +14,12 @@
     <table id="demo-table" data-page-length="10" data-order='[[0, "ASC"]]'>
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Position</th>
-                <th>Office</th>
-                <th>Age</th>
-                <th>Start date</th>
-                <th>Salary</th>
+                <th data-search="combobox">Name</th>
+                <th data-search="input">Position</th>
+                <th data-search="combobox">Office</th>
+                <th data-search="input">Age</th>
+                <th data-search="input">Start date</th>
+                <th data-search="input">Salary</th>
             </tr>
         </thead>
         <tbody>
