recherche possible via attribute data-search

--- a/demo/index1.html
+++ b/demo/index1.html
@@ -45,7 +45,7 @@
 <script>
     document.addEventListener("DOMContentLoaded", () => {
     // Initialiser TableBeautifuller pour le tableau d'exemple
-    let table = new TableBeautifuller("demo-table");
+    let table = new TableBeautifuller("#demo-table");
 
     // On peut détruire le tableau
     // table.destroy(); 
