--- a/demo/index2.html
+++ b/demo/index2.html
@@ -496,7 +496,7 @@
     document.addEventListener("DOMContentLoaded", () => {
     console.time();
     // Initialiser TableBeautifuller pour le tableau d'exemple
-    let table = new TableBeautifuller("demo-table", {
+    let table = new TableBeautifuller("#demo-table", {
         pageLength: 15,
         selectItemPage: [1, 10, 20 , 30, 50]
     });
