bugFix option.order

--- a/demo/index2.html
+++ b/demo/index2.html
@@ -498,7 +498,8 @@
     // Initialiser TableBeautifuller pour le tableau d'exemple
     let table = new TableBeautifuller("#demo-table", {
         pageLength: 15,
-        selectItemPage: [1, 10, 20 , 30, 50]
+        selectItemPage: [1, 10, 20 , 30, 50],
+        order : [[1, 'ASC']]
     });
 
     // On peut détruire le tableau
