legere optimisation et retouche graphique des bouttons

--- a/demo/index2.html
+++ b/demo/index2.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="table-container">
-    <table id="demo-table" data-page-length="10" data-order='[[0, "ASC"]]'>
+    <table id="demo-table" class="" data-page-length="10" data-order='[[0, "ASC"]]'>
         <thead>
             <tr>
                 <th data-search="combobox">Name</th>
