Ajout d'une version dist

--- a/demo/index1.html
+++ b/demo/index1.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table Beautifuler Demo</title>
 
-    <link rel="stylesheet" href="./../src/TableBeautifuller.min.css">
-    <script src="./../src/TableBeautifuller.js" defer></script>
+    <link rel="stylesheet" href="./../dist/css/TableBeautifuller.css">
+    <script src="./../dist/js/TableBeautifuller.js" defer></script>
 </head>
 <body>
 
