--- a/demo/index2.html
+++ b/demo/index2.html
@@ -15,7 +15,12 @@ document.addEventListener("DOMContentLoaded", () => {
     let table = new TableBeautifuller("#demo-table", {
         pageLength: 15,
         selectItemPage: [1, 10, 20 , 30, 50],
-        order : [[1, 'ASC']]
+        order : [[1, 'ASC']],
+        ordering: true,
+        paging: true,
+        info: true,
+        columnSearch: true,
+        searching: true,
     });
 
     // table.destroy();
