--- a/demo/index2.html
+++ b/demo/index2.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="./../dist/css/TableBeautifuller.css">
     <script src="./../dist/js/TableBeautifuller.js" defer></script>
+    <script src="./../dist/js/plugins/export.js" defer></script>
 </head>
 <body>
 
@@ -23,7 +24,11 @@ document.addEventListener("DOMContentLoaded", () => {
         searching: true,
     });
 
-    // table.destroy();
+    table.use(new TableBeautifullerExport({
+            exportCSV: true, 
+            copy: true
+        })
+    );
 });
 </script>
 
