Optimisation du code Bugfix stripe des lignes

--- a/perf/tableBeautifuler.html
+++ b/perf/tableBeautifuler.html
@@ -499,12 +499,16 @@ document.addEventListener("DOMContentLoaded", () => {
     const initialMemory = performance.memory.usedJSHeapSize;
 
     // Lancement chrono
-    const start = performance.now();
     const nbExcec = 3000;
+    const start = performance.now();
 
     for (let i = 0; i < nbExcec; i++) {
         // Initialiser TableBeautifuller pour le tableau d'exemple
-        let table = new TableBeautifuller("#demo-table");
+        let table = new TableBeautifuller("#demo-table", {
+            rowOddEven : false,
+            columnSearch : false,
+            // language: "./../dist/languages/fr_FR.json",
+        });
 
         // On peut détruire le tableau
         table.destroy(); 
