bugfix no apply Levenshtein in select

--- a/demo/index3 - html param.html
+++ b/demo/index3 - html param.html
@@ -46,13 +46,21 @@ document.addEventListener("DOMContentLoaded", () => {
             <tr>
                 <th data-search="combobox">Name</th>
                 <th data-search="input">Position</th>
-                <th >Office</th>
+                <th data-search="combobox">Office</th>
                 <th data-search="input">Age</th>
                 <th data-search="input">Start date</th>
                 <th data-search="input">Salary</th>
             </tr>
         </thead>
         <tbody>
+            <tr>
+                <td data-search="Tiger Nixan">T. Nixan</td>
+                <td>System Architect</td>
+                <td>Edinburgh</td>
+                <td>61</td>
+                <td data-order="1303689600">Mon 25th Apr 11</td>
+                <td data-order="320800">$320,800/y</td>
+            </tr>
             <tr>
                 <td data-search="Tiger Nixon">T. Nixon</td>
                 <td>System Architect</td>
