--- a/demo/index3 - html param.html
+++ b/demo/index3 - html param.html
@@ -41,7 +41,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 
 <div class="table-container">
-    <table id="demo-table" class="tableRowsColors tableRowsHover" data-page-length="10" data-order='[[0, "ASC"]]'>
+    <table id="demo-table" class="tableRowsColors tableRowsHover" data-page-length="10" data-order='[[0, "ASC"], [1, "DESC"]]'>
         <thead>
             <tr>
                 <th data-search="combobox">Name</th>
