add order for select

--- a/demo/index3 - html param.html
+++ b/demo/index3 - html param.html
@@ -46,7 +46,7 @@ document.addEventListener("DOMContentLoaded", () => {
             <tr>
                 <th data-search="combobox">Name</th>
                 <th data-search="input">Position</th>
-                <th data-search="combobox">Office</th>
+                <th data-search="combobox" data-searchOrder="desc">Office</th>
                 <th data-search="input">Age</th>
                 <th data-search="input">Start date</th>
                 <th data-search="input">Salary</th>
