Renaming of search types in the header

--- a/demo/index1.html
+++ b/demo/index1.html
@@ -21,9 +21,9 @@ document.addEventListener("DOMContentLoaded", () => {
     <table id="demo-table" data-page-length="1" data-order='[[0, "ASC"]]'>
         <thead>
             <tr>
-                <th data-search="combobox">Name</th>
-                <th data-search="input">Age</th>
-                <th data-search="combobox">Country</th>
+                <th data-search="select">Name</th>
+                <th data-search="text">Age</th>
+                <th data-search="select">Country</th>
                 <th>Date de naissance</th>
             </tr>
         </thead>
