--- a/demo/index3 - html param.html
+++ b/demo/index3 - html param.html
@@ -44,12 +44,12 @@ document.addEventListener("DOMContentLoaded", () => {
     <table id="demo-table" class="tableRowsColors tableRowsHover" data-page-length="10" data-order='[[0, "ASC"], [1, "DESC"]]'>
         <thead>
             <tr>
-                <th data-search="combobox">Name</th>
-                <th data-search="input">Position</th>
-                <th data-search="combobox" data-searchOrder="desc">Office</th>
-                <th data-search="input">Age</th>
-                <th data-search="input">Start date</th>
-                <th data-search="input">Salary</th>
+                <th data-search="select">Name</th>
+                <th data-search="text">Position</th>
+                <th data-search="select" data-searchOrder="desc">Office</th>
+                <th data-search="text">Age</th>
+                <th data-search="text">Start date</th>
+                <th data-search="text">Salary</th>
             </tr>
         </thead>
         <tbody>
