--- a/demo/index2.html
+++ b/demo/index2.html
@@ -57,12 +57,12 @@ document.addEventListener("DOMContentLoaded", () => {
     <table id="demo-table" class="tableRowsColors tableRowsHover" data-page-length="10" data-order='[[0, "ASC"]]'>
         <thead>
             <tr>
-                <th data-search="combobox">Name</th>
-                <th data-search="input">Position</th>
-                <th data-search="combobox">Office</th>
-                <th data-search="input">Age</th>
-                <th data-search="input">Start date</th>
-                <th data-search="input">Salary</th>
+                <th data-search="select">Name</th>
+                <th data-search="text">Position</th>
+                <th data-search="select">Office</th>
+                <th data-search="text">Age</th>
+                <th data-search="text">Start date</th>
+                <th data-search="text">Salary</th>
             </tr>
         </thead>
         <tbody>
