add change type search global

--- a/demo/index3 - html param.html
+++ b/demo/index3 - html param.html
@@ -34,7 +34,9 @@ document.addEventListener("DOMContentLoaded", () => {
             "copyTitle": "Copier dans le presse-papier",
             "copyExported" : "Texte copié dans le presse-papiers",
             "csv": "CSV",
-            "csvTitle": "Exporter en CSV"
+            "searchDropStrict": "Strict",
+            "searchDropRegex": "Regex",
+            "searchDropLevenshtein":  "Levenshtein"
         }
     });
 });
